--- a/about.html
+++ b/about.html
@@ -25,19 +25,16 @@
          }
       </style>
       <!-- Custom styles for this template -->
-      <link href="pricing.css" rel="stylesheet">
+      <link href="/assets/css/pricing.css" type="text/css" rel="stylesheet">
+      <script src = "/assets/js/jquery-3.6.0.min.js" type = "text/javascript"></script>
    </head>
    <body>
-      <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-body border-bottom shadow-sm">
-         <p class="h5 my-0 me-md-auto fw-normal">Company name</p>
-         <nav class="my-2 my-md-0 me-md-3">
-            <a class="p-2 text-dark" href="index.html">Home</a>
-            <a class="p-2 text-dark" href="#">Alert</a>
-            <a class="p-2 text-dark" href="subscription.html">Subscription</a>
-            <a class="p-2 text-dark" href="about.html">About</a>
-         </nav>
-         <a class="btn btn-outline-primary" href="#">Sign up</a>
-      </header>
+      <div id="navbar"></div>
+      <script type="text/javascript">
+          $(document).ready(function() {
+              $("#navbar").load("navbar.html"); 
+          });
+      </script>
       <main class="container">
          <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
             <h1 class="display-4">About</h1>
