--- a/subscription.html
+++ b/subscription.html
@@ -9,7 +9,7 @@
       <title>Pricing example · Bootstrap v5.0</title>
       <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/pricing/">
       <!-- Bootstrap core CSS -->
-      <link href="assets/css/bootstrap.min.css" rel="stylesheet">
+      <link href="/assets/css/bootstrap.min.css" type="text/css" rel="stylesheet">
       <style>
          .bd-placeholder-img {
          font-size: 1.125rem;
@@ -25,76 +25,21 @@
          }
       </style>
       <!-- Custom styles for this template -->
-      <link href="pricing.css" rel="stylesheet">
+      <link href="/assets/css/pricing.css" type="text/css" rel="stylesheet">
+      <script src = "/assets/js/jquery-3.6.0.min.js" type = "text/javascript"></script>
    </head>
    <body>
-      <header class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-body border-bottom shadow-sm">
-         <p class="h5 my-0 me-md-auto fw-normal">Company name</p>
-         <nav class="my-2 my-md-0 me-md-3">
-            <a class="p-2 text-dark" href="index.html">Home</a>
-            <a class="p-2 text-dark" href="#">Alert</a>
-            <a class="p-2 text-dark" href="subscription.html">Subscription</a>
-            <a class="p-2 text-dark" href="about.html">About</a>
-         </nav>
-         <a class="btn btn-outline-primary" href="#">Sign up</a>
-      </header>
+      <div id="navbar"></div>
+      <script type="text/javascript">
+          $(document).ready(function() {
+              $("#navbar").load("navbar.html"); 
+          });
+      </script>
+
+
       <main class="container">
          <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-            <h1 class="display-4">Pricing</h1>
-            <p class="lead">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>
-         </div>
-         <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
-            <div class="col">
-               <div class="card mb-4 shadow-sm">
-                  <div class="card-header">
-                     <h4 class="my-0 fw-normal">Free</h4>
-                  </div>
-                  <div class="card-body">
-                     <h1 class="card-title pricing-card-title">$0 <small class="text-muted">/ mo</small></h1>
-                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>10 users included</li>
-                        <li>2 GB of storage</li>
-                        <li>Email support</li>
-                        <li>Help center access</li>
-                     </ul>
-                     <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
-                  </div>
-               </div>
-            </div>
-            <div class="col">
-               <div class="card mb-4 shadow-sm">
-                  <div class="card-header">
-                     <h4 class="my-0 fw-normal">Pro</h4>
-                  </div>
-                  <div class="card-body">
-                     <h1 class="card-title pricing-card-title">$15 <small class="text-muted">/ mo</small></h1>
-                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>20 users included</li>
-                        <li>10 GB of storage</li>
-                        <li>Priority email support</li>
-                        <li>Help center access</li>
-                     </ul>
-                     <button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
-                  </div>
-               </div>
-            </div>
-            <div class="col">
-               <div class="card mb-4 shadow-sm">
-                  <div class="card-header">
-                     <h4 class="my-0 fw-normal">Enterprise</h4>
-                  </div>
-                  <div class="card-body">
-                     <h1 class="card-title pricing-card-title">$29 <small class="text-muted">/ mo</small></h1>
-                     <ul class="list-unstyled mt-3 mb-4">
-                        <li>30 users included</li>
-                        <li>15 GB of storage</li>
-                        <li>Phone and email support</li>
-                        <li>Help center access</li>
-                     </ul>
-                     <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
-                  </div>
-               </div>
-            </div>
+            <h1 class="display-4">Home</h1>
          </div>
          <footer class="pt-4 my-md-5 pt-md-5 border-top">
             <div class="row">
