--- a/subscription.html
+++ b/subscription.html
@@ -39,45 +39,14 @@
 
       <main class="container">
          <div class="pricing-header px-3 py-3 pt-md-5 pb-md-4 mx-auto text-center">
-            <h1 class="display-4">Home</h1>
+            <h1 class="display-4">Subscription</h1>
          </div>
-         <footer class="pt-4 my-md-5 pt-md-5 border-top">
-            <div class="row">
-               <div class="col-12 col-md">
-                  <img class="mb-2" src="assets/brand/bootstrap-logo.svg" alt="" width="24" height="19">
-                  <small class="d-block mb-3 text-muted">&copy; 2017–2021</small>
-               </div>
-               <div class="col-6 col-md">
-                  <h5>Features</h5>
-                  <ul class="list-unstyled text-small">
-                     <li><a class="link-secondary" href="#">Cool stuff</a></li>
-                     <li><a class="link-secondary" href="#">Random feature</a></li>
-                     <li><a class="link-secondary" href="#">Team feature</a></li>
-                     <li><a class="link-secondary" href="#">Stuff for developers</a></li>
-                     <li><a class="link-secondary" href="#">Another one</a></li>
-                     <li><a class="link-secondary" href="#">Last time</a></li>
-                  </ul>
-               </div>
-               <div class="col-6 col-md">
-                  <h5>Resources</h5>
-                  <ul class="list-unstyled text-small">
-                     <li><a class="link-secondary" href="#">Resource</a></li>
-                     <li><a class="link-secondary" href="#">Resource name</a></li>
-                     <li><a class="link-secondary" href="#">Another resource</a></li>
-                     <li><a class="link-secondary" href="#">Final resource</a></li>
-                  </ul>
-               </div>
-               <div class="col-6 col-md">
-                  <h5>About</h5>
-                  <ul class="list-unstyled text-small">
-                     <li><a class="link-secondary" href="#">Team</a></li>
-                     <li><a class="link-secondary" href="#">Locations</a></li>
-                     <li><a class="link-secondary" href="#">Privacy</a></li>
-                     <li><a class="link-secondary" href="#">Terms</a></li>
-                  </ul>
-               </div>
-            </div>
-         </footer>
+         <div id="footer"></div>
+         <script type="text/javascript">
+             $(document).ready(function() {
+                 $("#footer").load("footer.html"); 
+             });
+         </script>
       </main>
    </body>
 </html>
